# rust_shogi

./: Cargo.toml  sample.csa
src/: board.rs  csa.rs  dataload.rs  main.rs  move_koma.rs  neural.rs  piece_type.rs  position.rs  train.rs
