[package]
name = "rust_shogi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.3" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.3" }
rand = "0.8.5"
regex = "1.10.2"
termion = "3.0.0"


[target.'cfg(target_os = "linux")'.dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.3", features = ["cuda"] }

